Revision history for Dist-Zilla-PluginBundle-Author-SKIRMESS

{{$NEXT}}

        - Added .travis.yml
        - Fixed links in POD to specify text
        - Bugfix: .perltidyrc was not included in the distribution
        - Added .perltidyrc
        - Added Test::Perl::Critic author test and perlcriticrc config file
        - Added RemovePrereqs::Provided to dist.ini to remove the dependency
          on ourself from this distribution

0.003  2017-08-19 20:02:02 UTC

        - Added Prereqs plugin to add a dependency on the bundle in the used
          version
        - Added PromptIfStale plugin
        - Added PruneCruft plugin
        - Improved abstract
        - Improved documentation
        - Removed UpdateGitHub plugin

0.002  2017-08-18 23:45:16 UTC

        - Added CheckIssues plugin
        - Added CheckSelfDependency plugin
        - Added CheckStrictVersion plugin
        - Added Git::CheckFor::MergeConflicts plugin
        - Added Git::Remote::Check plugin
        - Added InstallGuide plugin and therefore an INSTALL file
        - Added MetaConfig plugin
        - Added UpdateGitHub plugin
        - Added VerifyPhases plugin
        - Added copyright_holder to dist.ini
        - Fixed a display issue in the POD
        - Plugins without arguments can be mentioned as scalar to add_plugins()
        - Removed FakeRelease plugin

0.001  2017-08-17 21:01:13 UTC

        - Initial release