@@ -25,7 +25,55 @@ provides:
     file: lib/Dist/Zilla/PluginBundle/Author/SKIRMESS.pm
     version: '0.003'
 requires:
-  Dist::Zilla::Role::BundleDeps: '0'
+  Dist::Zilla: '0'
+  Dist::Zilla::Plugin::Authority: '1.009'
+  Dist::Zilla::Plugin::AutoPrereqs: '0'
+  Dist::Zilla::Plugin::Bootstrap::lib: '0'
+  Dist::Zilla::Plugin::CPANFile: '0'
+  Dist::Zilla::Plugin::CheckChangesHasContent: '0'
+  Dist::Zilla::Plugin::CheckIssues: '0'
+  Dist::Zilla::Plugin::CheckMetaResources: '0'
+  Dist::Zilla::Plugin::CheckPrereqsIndexed: '0'
+  Dist::Zilla::Plugin::CheckSelfDependency: '0'
+  Dist::Zilla::Plugin::CheckStrictVersion: '0'
+  Dist::Zilla::Plugin::ConfirmRelease: '0'
+  Dist::Zilla::Plugin::CopyFilesFromBuild: '0'
+  Dist::Zilla::Plugin::CopyFilesFromRelease: '0'
+  Dist::Zilla::Plugin::CopyrightYearFromGit: '0'
+  Dist::Zilla::Plugin::ExecDir: '0'
+  Dist::Zilla::Plugin::Git::Check: '0'
+  Dist::Zilla::Plugin::Git::CheckFor::CorrectBranch: '0'
+  Dist::Zilla::Plugin::Git::CheckFor::MergeConflicts: '0'
+  Dist::Zilla::Plugin::Git::Commit: '0'
+  Dist::Zilla::Plugin::Git::Contributors: '0'
+  Dist::Zilla::Plugin::Git::GatherDir: '2.016'
+  Dist::Zilla::Plugin::Git::Push: '0'
+  Dist::Zilla::Plugin::Git::Remote::Check: '0'
+  Dist::Zilla::Plugin::Git::Tag: '0'
+  Dist::Zilla::Plugin::GithubMeta: '0'
+  Dist::Zilla::Plugin::InstallGuide: '1.200007'
+  Dist::Zilla::Plugin::License: '0'
+  Dist::Zilla::Plugin::MakeMaker: '0'
+  Dist::Zilla::Plugin::Manifest: '0'
+  Dist::Zilla::Plugin::ManifestSkip: '0'
+  Dist::Zilla::Plugin::MetaConfig: '0'
+  Dist::Zilla::Plugin::MetaJSON: '0'
+  Dist::Zilla::Plugin::MetaNoIndex: '0'
+  Dist::Zilla::Plugin::MetaProvides::Package: '0'
+  Dist::Zilla::Plugin::MetaYAML: '0'
+  Dist::Zilla::Plugin::MinimumPerl: '1.006'
+  Dist::Zilla::Plugin::NextRelease: '0'
+  Dist::Zilla::Plugin::Prereqs::Plugins: '0'
+  Dist::Zilla::Plugin::PromptIfStale: '0'
+  Dist::Zilla::Plugin::PruneCruft: '0'
+  Dist::Zilla::Plugin::ReadmeAnyFromPod: '0'
+  Dist::Zilla::Plugin::ReversionOnRelease: '0'
+  Dist::Zilla::Plugin::RunExtraTests: '0'
+  Dist::Zilla::Plugin::ShareDir: '0'
+  Dist::Zilla::Plugin::TestRelease: '0'
+  Dist::Zilla::Plugin::UploadToCPAN: '0'
+  Dist::Zilla::Plugin::VerifyPhases: '0'
+  Dist::Zilla::Plugin::VersionFromMainModule: '0'
   Dist::Zilla::Role::PluginBundle::Easy: '0'
   Moose: '0.99'
   namespace::autoclean: '0.09'
@@ -203,18 +251,6 @@ x_Dist_Zilla:
           version: '0.004'
       name: '@Author::SKIRMESS/MetaProvides::Package'
       version: '2.004003'
-    -
-      class: Dist::Zilla::Plugin::Prereqs::AuthorDeps
-      name: '@Author::SKIRMESS/Prereqs::AuthorDeps'
-      version: '0.006'
-    -
-      class: Dist::Zilla::Plugin::Prereqs
-      config:
-        Dist::Zilla::Plugin::Prereqs:
-          phase: develop
-          type: requires
-      name: '@Author::SKIRMESS/Prereqs'
-      version: '6.010'
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: '@Author::SKIRMESS/MetaConfig'
@@ -405,17 +441,14 @@ x_Dist_Zilla:
       name: '@Author::SKIRMESS/Git::Push'
       version: '2.042'
     -
-      class: Dist::Zilla::Plugin::Prereqs
+      class: Dist::Zilla::Plugin::Prereqs::Plugins
       config:
-        Dist::Zilla::Plugin::Prereqs:
-          phase: develop
-          type: requires
-      name: '@Author::SKIRMESS/::Role::BundleDeps'
-      version: '6.010'
-    -
-      class: Dist::Zilla::Plugin::RemovePrereqs::Provided
-      name: RemovePrereqs::Provided
-      version: '0.001001'
+        Dist::Zilla::Plugin::Prereqs::Plugins:
+          exclude: []
+          phase: runtime
+          relation: requires
+      name: Prereqs::Plugins
+      version: '1.003003'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
