@@ -17,7 +17,55 @@ my %WriteMakefileArgs = (
   "MIN_PERL_VERSION" => "5.006",
   "NAME" => "Dist::Zilla::PluginBundle::Author::SKIRMESS",
   "PREREQ_PM" => {
-    "Dist::Zilla::Role::BundleDeps" => 0,
+    "Dist::Zilla" => 0,
+    "Dist::Zilla::Plugin::Authority" => "1.009",
+    "Dist::Zilla::Plugin::AutoPrereqs" => 0,
+    "Dist::Zilla::Plugin::Bootstrap::lib" => 0,
+    "Dist::Zilla::Plugin::CPANFile" => 0,
+    "Dist::Zilla::Plugin::CheckChangesHasContent" => 0,
+    "Dist::Zilla::Plugin::CheckIssues" => 0,
+    "Dist::Zilla::Plugin::CheckMetaResources" => 0,
+    "Dist::Zilla::Plugin::CheckPrereqsIndexed" => 0,
+    "Dist::Zilla::Plugin::CheckSelfDependency" => 0,
+    "Dist::Zilla::Plugin::CheckStrictVersion" => 0,
+    "Dist::Zilla::Plugin::ConfirmRelease" => 0,
+    "Dist::Zilla::Plugin::CopyFilesFromBuild" => 0,
+    "Dist::Zilla::Plugin::CopyFilesFromRelease" => 0,
+    "Dist::Zilla::Plugin::CopyrightYearFromGit" => 0,
+    "Dist::Zilla::Plugin::ExecDir" => 0,
+    "Dist::Zilla::Plugin::Git::Check" => 0,
+    "Dist::Zilla::Plugin::Git::CheckFor::CorrectBranch" => 0,
+    "Dist::Zilla::Plugin::Git::CheckFor::MergeConflicts" => 0,
+    "Dist::Zilla::Plugin::Git::Commit" => 0,
+    "Dist::Zilla::Plugin::Git::Contributors" => 0,
+    "Dist::Zilla::Plugin::Git::GatherDir" => "2.016",
+    "Dist::Zilla::Plugin::Git::Push" => 0,
+    "Dist::Zilla::Plugin::Git::Remote::Check" => 0,
+    "Dist::Zilla::Plugin::Git::Tag" => 0,
+    "Dist::Zilla::Plugin::GithubMeta" => 0,
+    "Dist::Zilla::Plugin::InstallGuide" => "1.200007",
+    "Dist::Zilla::Plugin::License" => 0,
+    "Dist::Zilla::Plugin::MakeMaker" => 0,
+    "Dist::Zilla::Plugin::Manifest" => 0,
+    "Dist::Zilla::Plugin::ManifestSkip" => 0,
+    "Dist::Zilla::Plugin::MetaConfig" => 0,
+    "Dist::Zilla::Plugin::MetaJSON" => 0,
+    "Dist::Zilla::Plugin::MetaNoIndex" => 0,
+    "Dist::Zilla::Plugin::MetaProvides::Package" => 0,
+    "Dist::Zilla::Plugin::MetaYAML" => 0,
+    "Dist::Zilla::Plugin::MinimumPerl" => "1.006",
+    "Dist::Zilla::Plugin::NextRelease" => 0,
+    "Dist::Zilla::Plugin::Prereqs::Plugins" => 0,
+    "Dist::Zilla::Plugin::PromptIfStale" => 0,
+    "Dist::Zilla::Plugin::PruneCruft" => 0,
+    "Dist::Zilla::Plugin::ReadmeAnyFromPod" => 0,
+    "Dist::Zilla::Plugin::ReversionOnRelease" => 0,
+    "Dist::Zilla::Plugin::RunExtraTests" => 0,
+    "Dist::Zilla::Plugin::ShareDir" => 0,
+    "Dist::Zilla::Plugin::TestRelease" => 0,
+    "Dist::Zilla::Plugin::UploadToCPAN" => 0,
+    "Dist::Zilla::Plugin::VerifyPhases" => 0,
+    "Dist::Zilla::Plugin::VersionFromMainModule" => 0,
     "Dist::Zilla::Role::PluginBundle::Easy" => 0,
     "Moose" => "0.99",
     "namespace::autoclean" => "0.09",
@@ -32,7 +80,55 @@ my %WriteMakefileArgs = (
 
 
 my %FallbackPrereqs = (
-  "Dist::Zilla::Role::BundleDeps" => 0,
+  "Dist::Zilla" => 0,
+  "Dist::Zilla::Plugin::Authority" => "1.009",
+  "Dist::Zilla::Plugin::AutoPrereqs" => 0,
+  "Dist::Zilla::Plugin::Bootstrap::lib" => 0,
+  "Dist::Zilla::Plugin::CPANFile" => 0,
+  "Dist::Zilla::Plugin::CheckChangesHasContent" => 0,
+  "Dist::Zilla::Plugin::CheckIssues" => 0,
+  "Dist::Zilla::Plugin::CheckMetaResources" => 0,
+  "Dist::Zilla::Plugin::CheckPrereqsIndexed" => 0,
+  "Dist::Zilla::Plugin::CheckSelfDependency" => 0,
+  "Dist::Zilla::Plugin::CheckStrictVersion" => 0,
+  "Dist::Zilla::Plugin::ConfirmRelease" => 0,
+  "Dist::Zilla::Plugin::CopyFilesFromBuild" => 0,
+  "Dist::Zilla::Plugin::CopyFilesFromRelease" => 0,
+  "Dist::Zilla::Plugin::CopyrightYearFromGit" => 0,
+  "Dist::Zilla::Plugin::ExecDir" => 0,
+  "Dist::Zilla::Plugin::Git::Check" => 0,
+  "Dist::Zilla::Plugin::Git::CheckFor::CorrectBranch" => 0,
+  "Dist::Zilla::Plugin::Git::CheckFor::MergeConflicts" => 0,
+  "Dist::Zilla::Plugin::Git::Commit" => 0,
+  "Dist::Zilla::Plugin::Git::Contributors" => 0,
+  "Dist::Zilla::Plugin::Git::GatherDir" => "2.016",
+  "Dist::Zilla::Plugin::Git::Push" => 0,
+  "Dist::Zilla::Plugin::Git::Remote::Check" => 0,
+  "Dist::Zilla::Plugin::Git::Tag" => 0,
+  "Dist::Zilla::Plugin::GithubMeta" => 0,
+  "Dist::Zilla::Plugin::InstallGuide" => "1.200007",
+  "Dist::Zilla::Plugin::License" => 0,
+  "Dist::Zilla::Plugin::MakeMaker" => 0,
+  "Dist::Zilla::Plugin::Manifest" => 0,
+  "Dist::Zilla::Plugin::ManifestSkip" => 0,
+  "Dist::Zilla::Plugin::MetaConfig" => 0,
+  "Dist::Zilla::Plugin::MetaJSON" => 0,
+  "Dist::Zilla::Plugin::MetaNoIndex" => 0,
+  "Dist::Zilla::Plugin::MetaProvides::Package" => 0,
+  "Dist::Zilla::Plugin::MetaYAML" => 0,
+  "Dist::Zilla::Plugin::MinimumPerl" => "1.006",
+  "Dist::Zilla::Plugin::NextRelease" => 0,
+  "Dist::Zilla::Plugin::Prereqs::Plugins" => 0,
+  "Dist::Zilla::Plugin::PromptIfStale" => 0,
+  "Dist::Zilla::Plugin::PruneCruft" => 0,
+  "Dist::Zilla::Plugin::ReadmeAnyFromPod" => 0,
+  "Dist::Zilla::Plugin::ReversionOnRelease" => 0,
+  "Dist::Zilla::Plugin::RunExtraTests" => 0,
+  "Dist::Zilla::Plugin::ShareDir" => 0,
+  "Dist::Zilla::Plugin::TestRelease" => 0,
+  "Dist::Zilla::Plugin::UploadToCPAN" => 0,
+  "Dist::Zilla::Plugin::VerifyPhases" => 0,
+  "Dist::Zilla::Plugin::VersionFromMainModule" => 0,
   "Dist::Zilla::Role::PluginBundle::Easy" => 0,
   "Moose" => "0.99",
   "namespace::autoclean" => "0.09",
