@@ -8,4 +8,5 @@ copyright_holder = Sven Kirmess
 [Bootstrap::lib]
 [@Author::SKIRMESS]
 
-[RemovePrereqs::Provided]
+[Prereqs::Plugins]
+phase = runtime
